misc: fix normal html server function

--- a/templates/config.hbs
+++ b/templates/config.hbs
@@ -3,6 +3,7 @@ var config = {
     maxRetry: 10,
     logMode: 0,
     view: '{{{staticViews}}}',
+    autoOpen:true,
     mock: {
         api: '{{{apiMock}}}',
         proxy: null,
