misc: update api configuration, update __json configuration format

--- a/templates/config.hbs
+++ b/templates/config.hbs
@@ -5,8 +5,13 @@ var config = {
     view: '{{{staticViews}}}',
     autoOpen:true,
     mock: {
-        api: '{{{apiMock}}}',
+        api: {
+            root: '{{{apiMock}}}',
+            get: 'get',
+            post: 'post',
+        }
         proxy: null,
+        fileName: 'data',
     },
     template: {
         engine: 'ftl',
