--- a/templates/config.hbs
+++ b/templates/config.hbs
@@ -22,10 +22,10 @@ var config = {
         '{{{webRoot}}}'
     ],
     watch: [
-        '{{{webRoot}}}/src/css',
-        '{{{webRoot}}}/src/stykesheet',
-        '{{{webRoot}}}/src/js',
-        '{{{webRoot}}}/src/javascript',
+        '{{{webRoot}}}/src/css/**/*.css',
+        '{{{webRoot}}}/src/stylesheet/**/*.css',
+        '{{{webRoot}}}/src/js/**/*.js',
+        '{{{webRoot}}}/src/javascript/**/*.js',
     ],
     pages: [
         {{#each pages}}
