misc: update default configure files

--- a/templates/config.hbs
+++ b/templates/config.hbs
@@ -26,6 +26,8 @@ var config = {
         '{{{webRoot}}}/src/stylesheet/**/*.css',
         '{{{webRoot}}}/src/js/**/*.js',
         '{{{webRoot}}}/src/javascript/**/*.js',
+        '{{{webRoot}}}/src/js/**/*.html',
+        '{{{webRoot}}}/src/javascript/**/*.html',
     ],
     pages: [
         {{#each pages}}
